<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="10dp">
        <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:id="@+id/cvAluno"
                                           app:cardCornerRadius="10dp"
                                           app:cardElevation="10dp"
                                           app:cardUseCompatPadding="true">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">
                <!--RA e CPF-->
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:padding="5dp">
                    <!--RA-->
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/ra">
                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edRaAlunoView"
                                android:focusable="false"
                                android:backgroundTint="@color/white">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--CPF-->
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp"
                            android:hint="@string/cpf">
                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edCPFAlunoView"
                                android:focusable="false"
                                android:backgroundTint="@color/white">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <!--Nome-->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edNomeAlunoView"
                            android:focusable="false"
                            android:backgroundTint="@color/white">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <!--Curso e Periodo-->
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:padding="5dp">
                    <!--Curso-->
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:hint="@string/curso">
                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edCursoAlunoView"
                                android:focusable="false"
                                android:backgroundTint="@color/white">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Periodo-->
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp"
                            android:hint="@string/periodo">
                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edPeriodoAlunoView"
                                android:focusable="false"
                                android:backgroundTint="@color/white">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <!--Data Matricula e Nascimento-->
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:padding="5dp">
                    <!--Data Matricula-->
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/dataInscricao">
                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edDtInscricaoAlunoView"
                                android:focusable="false"
                                android:backgroundTint="@color/white">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Data Nascimento-->
                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp"
                            android:hint="@string/dataNascimento">
                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/edDtNascimentoAlunoView"
                                android:focusable="false"
                                android:backgroundTint="@color/white">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
</LinearLayout>